Changelog for plone.theme

    (name of developer listed in brackets)

plone.theme - 1.0  August 15, 2007

    - First stable release
      [wichert]
