@@ -2,8 +2,12 @@ Changelog for plone.theme
 
     (name of developer listed in brackets)
 
+plone.theme - 1.1  April 3, 2009
+
+    - Make sure the theme layer takes precedence over other browser layers.
+      [davisagli]
+
 plone.theme - 1.0  August 15, 2007
 
     - First stable release
       [wichert]
-
